# 3D-modelling

./: .gitignore
Dissertation/: .gitignore  diss.tex  dissertation.tex  proposal.tex  refs.bib  relatedSoftwareTable.tex
Evaluation/: .gitignore  Makefile  cmake_install.cmake  convexHull.cpp  data_gatherer.cpp  graph_maker.py
PictureGen/: pictureGen.py  povTemplate.mako  spiral.py
PictureGen/Input/: scrmbl.inc
PointCloudConstructor/: .gitignore  .ycm_extra_conf.py  ByDistanceComparator.cpp  ByDistanceComparator.h  FeatureMatcher.cpp  FeatureMatcher.h  Image.cpp  Image.h  PointCloudConstructor.cpp  PointCloudConstructor.h  RadiusOutlierRemovalFilter.cpp  RadiusOutlierRemovalFilter.h  SConstruct  StatisticalRemovalFilter.cpp  StatisticalRemovalFilter.h  camera.py  viewPoints.py
PointCloudConstructor/Input/: rubic.inc
Proposal/: propbody.tex
SurfaceReconstruction/: .gitignore  CMakeLists.txt  greedy_projection.cpp  resample.cpp  srec-cgal.cpp  surfaceRec.cpp  viewPoints.py
src/Picture Generator/: pictureGen.py  povTemplate.mako
